src/test/deca/syntax/invalid/arithmetic-plusEqual.synt
arithmetic-plusEqual.deca:12:

